# pelorus-nav

./: .gitignore  CHANGELOG.md  CLAUDE.md  CUSTOM-REGIONS.md  EINK-PLAN.md  LICENSE.md  MULTIDEVICE-PLANS.md  NOTICE  PLAN.md  README.md  TODO-ecdis-symbols.md  TODO.txt  biome.json  capacitor.config.ts  design-provider-lifecycle-2026-07-04.md  index.html  package.json  playwright.config.ts  tsconfig.json  tsconfig.worker.json  vite.config.ts  vitest.config.ts  wrangler.toml
android/: capacitor.settings.gradle
branding/: README.md  make-logo.py
docs/: detail-levels.md  maplibre-v6-migration.md  perf-findings.md
docs-site/: chart-display.md  environment.md  getting-started.md  index.md  plotting.md  routes.md  tracks.md
ios/: .beta-config.example  debug.xcconfig
public/: .assetsignore  landing.html  manifest.json  nautical-unified.coverage.geojson  privacy.html  tides-stations.json
src/: main.ts  opfs.d.ts  raw-modules.d.ts  settings.plugins.test.ts  settings.test.ts  settings.ts  style.css  worker.ts
tools/: build-tiles.sh  docs-icons.ts  (+16 more)
tools/admin/: README.md  pyproject.toml
tools/admin/pelorus_admin/: api.py  app.py  models.py
tools/admin/tests/: test_models.py
tools/s57-pipeline/: DATAFLOW.md  MULTI_SCALE.md  NOAA-ENC-info.md  README.md  TUI-PLAN.md  pyproject.toml
tools/s57-pipeline/s57_pipeline/: __init__.py  __main__.py  cli.py  composite.py  convert.py  coverage.py  download.py  enrich.py  labels.py  layers.py  merge.py  progress.py  query.py  regions.py  s52_metadata.py  scamin.py  search_index.py  state.py  symbols.py  tile.py  tilemath.py
tools/s57-pipeline/tests/: test_clip.py  test_composite.py  test_coverage.py  test_enrich.py  test_labels.py  test_layers.py  test_merge.py  test_regions.py  test_s52_metadata.py  test_scamin.py  test_search_index.py  test_state.py  test_symbols.py
(+445 files in other folders)
