[project]
name = "pelorus-admin"
version = "0.1.0"
description = "TUI for browsing and triaging Pelorus Nav bug reports and signups"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "platformdirs>=4.0",
    "textual>=1.0",
]

[project.scripts]
pelorus-admin = "pelorus_admin.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pelorus_admin"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]
