[project]
name = "s57-pipeline"
version = "0.1.0"
description = "S-57 ENC → PMTiles vector tile pipeline for Pelorus Nav"
requires-python = ">=3.11"
dependencies = [
    "mapbox-vector-tile>=2.0",
    "pmtiles>=3.7.0",
    "rich>=13.0",
    "shapely>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88

[dependency-groups]
dev = [
    "pmtiles>=3.7.0",
    "pytest>=9.0.2",
]
